--- a/SMA.ipynb
+++ b/SMA.ipynb
@@ -83,9 +83,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " AAPL.csv   fi2.png   fi.png\t  static     'time series.ipynb'\r\n",
-      " app.py     fi3.png   SMA.ipynb   templates\r\n",
-      " env\t    fii.png   sma.py\t  test.md\r\n"
+      " AAPL.csv   fi2.png   fi.png\t  static     'time series.ipynb'\n",
+      " app.py     fi3.png   SMA.ipynb   templates\n",
+      " env\t    fii.png   sma.py\t  test.md\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "49ae0394",
    "metadata": {
     "execution": {
@@ -105,14 +105,23 @@
      "shell.execute_reply": "2022-11-16T21:32:51.441648Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/6C18C37118C338BA/final project/syst/env/lib/python3.10/site-packages/mplfinance/_styles.py:24: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+      "  plt.style.use(style['base_mpl_style'])\n"
+     ]
+    }
+   ],
    "source": [
-    "mpf.plot(df[\"2022-04-01\":],savefig='fi.png')"
+    "mpf.plot(df[\"2022-04-01\":],savefig='static/photo/fi.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "2e7bfb20",
    "metadata": {
     "execution": {
@@ -122,15 +131,24 @@
      "shell.execute_reply": "2022-11-16T21:32:51.583684Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/6C18C37118C338BA/final project/syst/env/lib/python3.10/site-packages/mplfinance/_styles.py:24: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+      "  plt.style.use(style['base_mpl_style'])\n"
+     ]
+    }
+   ],
    "source": [
     "extra_plot  = mpf.make_addplot(df.loc[\"2022-09-01\":, [\"High\",\"Low\"]])\n",
-    "mpf.plot(df[\"2022-09-01\":], addplot=extra_plot,savefig='fii.png')"
+    "mpf.plot(df[\"2022-09-01\":], addplot=extra_plot,savefig='static/photo/dowvol.png',volume=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "cd98565c",
    "metadata": {
     "execution": {
@@ -140,14 +158,23 @@
      "shell.execute_reply": "2022-11-16T21:32:51.725431Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/6C18C37118C338BA/final project/syst/env/lib/python3.10/site-packages/mplfinance/_styles.py:24: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+      "  plt.style.use(style['base_mpl_style'])\n"
+     ]
+    }
+   ],
    "source": [
-    "mpf.plot(df[\"2022-09-01\":], type=\"candle\",style=\"binance\",savefig='fi2.png')"
+    "mpf.plot(df[\"2022-09-01\":], type=\"candle\",style=\"binance\",savefig='static/photo/fi2.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "b5b0c871",
    "metadata": {
     "execution": {
@@ -157,23 +184,24 @@
      "shell.execute_reply": "2022-11-16T21:32:52.269208Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/6C18C37118C338BA/final project/syst/env/lib/python3.10/site-packages/mplfinance/_styles.py:24: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+      "  plt.style.use(style['base_mpl_style'])\n"
+     ]
+    }
+   ],
    "source": [
-    "mpf.plot(df, type=\"candle\", mav=(10, 20), volume=True,style=\"binance\",savefig='fi3.png')"
+    "mpf.plot(df, type=\"candle\", mav=(10,20,30), volume=True,style=\"binance\",savefig='static/photo/movingavg.png')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e540408d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('env': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -187,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
